2007-01-29  Thorsten Kukuk  <kukuk@suse.de>

	* src/pam-config.8.xml: Remove NIS references.

2007-01-29  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.15

	* src/pam-config.c (main): Fix -d usage for pwcheck-minlen.
	* src/pam-config.8.xml: Remove --pam_pwcheck-no_minlen.

2007-01-26  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.14

	* src/pam-config.c (main): Allow minlen=0 as pam_pwcheck.so
	option.
	* src/print_module.c (print_module_pwcheck): Likewise.
	* src/write_config_password.c (write_config_password): Likewise.
	* src/pam-config.h: Likewise.

	* src/pam-config.8.xml: Document --pam_pwcheck-no_minlen.

	* src/pam-config.c (main): Support ignore_unknown_principals
	option of pam_krb5.
	* src/pam-config.h: Likewise.
	* src/write_config_account.c (write_config_account): Likewise.
	* src/load_config.c (parse_krb5_options): Likewise.

	* src/pam-config.8.xml: Document new pam_krb5 options.

2006-10-25  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.13

	* src/print_module.c (print_module_cracklib): Fix typo.

	* src/pam-config.h: Add support for pam_capability.
	* src/pam-config.c (main): Likewise.
	* src/print_module.c (print_module_capability): Likewise.
	* src/load_config.c (load_config): Likewise.
	* src/pam-config.8.xml: Likewise.

	* src/write_config_session.c: Make pam_apparmor optional
	[Fate#300510].
	(write_config_session): Write pam_capability entry.

2006-09-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.12

	* src/sanity_checks.c (sanitize_check_password): Don't ignore
	debug flag if convert from pam_cracklib to pam_pwcheck.

2006-09-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.11

	* src/write_config_session.c (write_config_session): Add support
	for pam_umask.so.
	* src/pam-config.h: Likewise.
	* src/pam-config.c: Likewise.
	* src/pam-config.8.xml: Likewise.
	* src/load_config.c (parse_umask_options): New.
	* src/print_module.c (print_module_umask): New.
