@@ -1,17 +1,17 @@
 .\"     Title: pam\-config
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.71.1 <http://docbook.sf.net/>
-.\"      Date: 01/29/2007
-.\"    Manual: NIS Reference Manual
-.\"    Source: NIS Reference Manual
+.\"      Date: 06/14/2007
+.\"    Manual: Reference Manual
+.\"    Source: Reference Manual
 .\"
-.TH "PAM\-CONFIG" "8" "01/29/2007" "NIS Reference Manual" "NIS Reference Manual"
+.TH "PAM\-CONFIG" "8" "06/14/2007" "Reference Manual" "Reference Manual"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
 .ad l
 .SH "NAME"
-pam\-config \- create or dump a ypserv database file
+pam\-config \- Adjust common PAM config files
 .SH "SYNOPSIS"
 .HP 11
 \fBpam\-config\fR [\-\-debug] \-a | \-c | \-d | \-q  [\-f] [...]
